# AutonomousCognitiveCore

./: .gitignore  4Dummies.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: acc-ci.yml
KIdieKIruft/: .gitignore  README.md  orchestrator.py
KIdieKIruft/docs/: next_steps_roadmap.md  orchestrator_review_loop.md  release_readiness.md
KIdieKIruft/scripts/: build_release.sh  check_orchestrator_loop.sh  check_orchestrator_rework.sh  check_release_readiness.sh  worker_codex.sh
acc/: __init__.py  config.py  db.py  embedding.py  exploration.py  goal_generator.py  llm.py  memory.py  meta_cognition.py  orchestrator.py  project_planner.py  self_modification.py  service_runtime.py  state.py
config/: acc.example.ini
docs/: README.md  architecture.md  configuration.md  daemon-mode.md  llm-integration.md  original-blueprint.md  repo-bootstrap.md  roadmap.md  runbook.md  runtime-loop.md  self-modification.md  semantic-memory.md  state-and-schema.md  task-core.md  validation-and-metrics.md
nimcf/: agent_loop.py  pyproject.toml  run.py  runbook.md
nimcf/src/core/: api.py  cognitive_map.py  coordinator.py  domain.py  memory_manager.py  safety.py
nimcf/src/memory/: db.py  retrieval.py
nimcf/src/modules/: __init__.py  base.py  emotion.py  logic.py  nlp.py  registry.py  topic.py
nimcf/src/utils/: show_tree.py
nimcf/tests/: conftest.py  test_coordinator.py
scripts/: clean_workspace.sh
(+15 files in other folders)
